# urbanarpg

./: 12_04_2026_qna.MD  BUILD.md  LEARNING.md  README.MD  TODO.md
.claude/: settings.local.json
dodge/: Cargo.toml  diff.txt
dodge/.cargo/: config.toml
dodge/src/: lib.rs
dodge/src/entity/: adventurer.rs  game.rs  mob.rs  mod.rs  player.rs  slime.rs
dodge/src/item/: healthpickup.rs  mod.rs
dodge/src/scene/: game.rs  hud.rs  mod.rs
dodge/src/script/: playerstats.rs
dodge/src/template/: mod.rs  portal.rs
godot/dodge-the-creeps-rust/: Dodge the Creeps Rust.apple-touch-icon.png.import  Dodge the Creeps Rust.html  Dodge the Creeps Rust.icon.png.import  Dodge the Creeps Rust.pck  Dodge the Creeps Rust.png.import  dodgerust.gdextension  dodgerust.gdextension.uid  export_presets.cfg  game.tscn  main.gd  main.gd.uid  main.tscn  mob.tscn  player.tscn  project.godot  test.tscn
godot/dodge-the-creeps-rust/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  playerGrey_up1.png.import  playerGrey_walk1.png.import  (+1 more)
godot/urban-rpg/: export_presets.cfg  game.tscn  icon.svg.import  mob.tscn  project.godot  test.tscn  urbanarpg.gdextension  urbanarpg.gdextension.uid
urbanarpgrust/: Cargo.toml  rust-toolchain.toml
urbanarpgrust/.cargo/: config.toml
urbanarpgrust/src/entity/: mod.rs  slime.rs
urbanarpgrust/src/scene/: hud.rs
urbanarpgrust/src/script/: mod.rs
urbanarpgrust/src/template/: levelroot.rs  portal.rs
urbanarpgrust/src/ui/: healthbar.rs
(+47 files in other folders)
