[package]
name = "urbanarpgrust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5" # Use the latest version

[lib]
crate-type = ["cdylib"]

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["api-custom", "experimental-wasm", "experimental-wasm-nothreads", "lazy-function-tables"]